--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,14 @@
                     <shadedArtifactAttached>false</shadedArtifactAttached>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
