--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <version>${mockito-all.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
