Issue #11315 Probleme mit mergen, sollte jetzt alles funktionieren

--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,25 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
             <version>4.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -133,6 +149,7 @@
                     <shadedArtifactAttached>false</shadedArtifactAttached>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
