--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ### Intellij ###
+.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
@@ -17,7 +18,7 @@
 /out/
 .idea_modules/
 ws16_sepm_qse_01.iml
-
+*.iml
 ### Java ###
 *.class
 *.jar
