--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
 ### Intellij ###
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-.idea/gradle.xml
-.idea/libraries
-.idea/mongoSettings.xml
+.idea/*
 *.iws
 /out/
 .idea_modules/
-
+ws16_sepm_qse_01.iml
+*.iml
 ### Java ###
 *.class
 *.jar
@@ -55,3 +43,4 @@ target/
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !maven-wrapper.jar
+.idea/
