--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
 ### Intellij ###
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-.idea/gradle.xml
-.idea/libraries
-.idea/mongoSettings.xml
+.idea/*
 *.iws
 /out/
 .idea_modules/
 ws16_sepm_qse_01.iml
-
+*.iml
 ### Java ###
 *.class
 *.jar
