--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,17 +87,17 @@ deploy:jdk8:
   image: maven:3.3.9-jdk-8
 
 
-pages:
-  image: busybox:latest
-  stage: deploy
-  script:
+#pages:
+#  image: busybox:latest
+#  stage: deploy
+#  script:
     # Because Maven appends the artifactId automatically to the staging path if you did define a parent pom,
     # you might need to use `mv target/staging/YOUR_ARTIFACT_ID public` instead.
-    - mv target/staging public
-  dependencies:
-    - deploy:jdk8
-  artifacts:
-    paths:
-    - public
-  only:
-    - master
+#    - mv target/staging public
+#  dependencies:
+#    - deploy:jdk8
+#  artifacts:
+#    paths:
+#    - public
+#  only:
+#    - master
