--- a/shippable.yml
+++ b/shippable.yml
@@ -8,11 +8,14 @@ branches:
     - master
 
 build:
+  pre_ci:
+    - docker build -t FotostudioAmPunkt/java8-oracle-opencv:$BRANCH.BUILD_NUMBER .
+
   #Prepare Docker-Container with OpenCV and Java 8
   pre_ci_boot:
-    image_name: eedkevin/opencv-java8
+    image_name: FotostudioAmPunkt/java8-oracle-opencv
     image_tag: latest
-    pull: true
+    pull: false
     
 
   ci:
