[Issue #4] - This is getting ridiculous 2

--- a/shippable.yml
+++ b/shippable.yml
@@ -15,7 +15,7 @@ build:
   pre_ci_boot:
     image_name: fotostudioampunkt/java8-oracle-opencv
     image_tag: latest
-    pull: false
+    pull: true
     
 
   ci:
