--- a/shippable.yml
+++ b/shippable.yml
@@ -20,7 +20,7 @@ build:
 
   ci:
     #Copy opencv files and maven
-    - cp /opencv-java-bin .
+    - cp /opencv-java-bin /root/opencv-java-bin
     - sudo apt-get install maven -y
     #Build project
     - mvn compile
