[Issue #4] - Add slack integration

--- a/shippable.yml
+++ b/shippable.yml
@@ -28,3 +28,11 @@ build:
     - mvn compile
     #Run tests
     - mvn test
+
+integrations:
+  notifications:
+    - integrationName: slack_fotostudio
+      type: slack
+      recipients:
+        - "#build"
+
