Slack Integration in shippable.yml updated

--- a/shippable.yml
+++ b/shippable.yml
@@ -36,7 +36,7 @@ build:
 
 integrations:
   notifications:
-    - integrationName: slack_fotostudio
+    - integrationName: OpenBooth_SlackIntegration
       type: slack
       recipients:
         - "#build"
