--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.2.0-1</version>
+        </dependency>
         <!-- runtime and testing -->
         <dependency>
             <groupId>org.slf4j</groupId>
