--- a/src/main/resources/config/defaults.properties
+++ b/src/main/resources/config/defaults.properties
@@ -1,5 +1,5 @@
-executions_per_second=24
-number_of_shots=3
+max_previews_per_second=24
+burst_number_of_shots=3
 show_shot_time=2000
 image_prefix=img
 image_storage_path=~/openbooth_images
